:point_down: mobile time slots need to be taller to avoid truncation

--- a/css/style.css
+++ b/css/style.css
@@ -1958,7 +1958,7 @@ footer .credits i {
   -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  max-height: 28em;
+  max-height: 38em;
   overflow: hidden;
   opacity: 1;
 }
